--- a/src/styles/components/business/_title.scss
+++ b/src/styles/components/business/_title.scss
@@ -1,8 +1,12 @@
 .title {
-	padding: 230px 0 105px 0;
+	padding: 205px 0 105px 0;
 
 	@include desktop {
-		padding: 150px 55px 120px 0;
+		padding: 150px 55px 100px 0;
+	}
+
+	@include desktop_extra_small {
+		padding: 150px 55px 0 0;
 	}
 
 	@include tablet {
@@ -17,7 +21,7 @@
 		@include bold-60-uppercase;
 		color: $black;
 
-		@include desktop_small {
+		@include desktop {
 			@include bold-40-uppercase;
 		}
 
@@ -47,7 +51,7 @@
 			
 			@include bold-60-uppercase;
 
-			@include desktop_small {
+			@include desktop {
 				@include bold-40-uppercase;
 			}
 
@@ -67,7 +71,7 @@
 				@include bold-60-uppercase;
 				color: $green50;
 
-				@include desktop_small {
+				@include desktop {
 					@include bold-40-uppercase;
 				}
 
