--- a/src/styles/components/business/_title.scss
+++ b/src/styles/components/business/_title.scss
@@ -37,6 +37,10 @@
 		display: flex;
 		flex-direction: column;
 
+		& > span {
+			line-height: 1;
+		}
+
 		& > div {
 			display: flex;
 			flex-direction: column;
@@ -62,29 +66,33 @@
 				flex-direction: column;
 				align-items: flex-start;
 			}
+		}
 
-			& > .btn {
+		.btn_secondary {
+			padding: 16px 24px;
+			height: 80%;
+
+			@include desktop {
+				padding: 8px 20px;
+			}
+
+			@include desktop_base {
+				padding: 6px 16px;
+			}
+
+			@include mobile {
+				padding: 10px 20px;
+			}
+
+			.children {
+				@include medium-18;
+
 				@include desktop {
-					padding: 8px 20px;
-					height: 100%;
+					@include medium-14;
 				}
 
 				@include desktop_base {
-					padding: 6px 16px;
-				}
-
-				@include mobile {
-					padding: 10px 20px;
-				}
-
-				.children {
-					@include desktop {
-						@include medium-14;
-					}
-
-					@include desktop_base {
-						@include medium-12;
-					}
+					@include medium-12;
 				}
 			}
 		}
