--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -115,6 +115,7 @@
     <a class="menu__link" href="#">35 лет истории успеха</a>
     <p>Группа компаний «Форт Диалог» – основана в 1989 году и является одной из крупнейших российских региональных
       компаний, работающих в сфере системной интеграции.</p>
+    <a href="#" class="link link_green-arrow">подробнее</a>
   </div>
 </nav>
 <div id="write-us" class="popup">
