--- a/src/styles/components/business/_menu.scss
+++ b/src/styles/components/business/_menu.scss
@@ -76,6 +76,15 @@
 		p {
 			max-height: 90px;
 			overflow: hidden;
+			text-overflow: ellipsis;
+			display: -webkit-box;
+			-webkit-line-clamp: 4;
+			-webkit-box-orient: vertical;
+		}
+
+		.link {
+			@include regular-18-uppercase;
+			margin: 20px 0 0 0;
 		}
 	}
 }
