--- a/src/styles/components/business/_documents.scss
+++ b/src/styles/components/business/_documents.scss
@@ -1,5 +1,10 @@
 .documents {
 	overflow-x: hidden;
+	padding-bottom: 140px;
+
+	@include tablet {
+		padding-bottom: 80px;
+	}
 
 	.swiper-component {
 		margin-top: 80px;
@@ -36,6 +41,70 @@
 		a {
 			opacity: 1;
 		}
+	}
+
+	&__certificates {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 40px;
+		margin-top: 40px;
+		margin-bottom: 40px;
+
+		@include tablet {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@include mobile {
+			grid-template-columns: 1fr;
+			gap: 20px;
+		}
+	}
+
+	&__certificate {
+		display: flex;
+		gap: 16px;
+
+		@include mobile {
+			gap: 10px;
+		}
+
+		img {
+			width: 40px;
+			height: 40px;
+
+			@include mobile {
+				width: 32px;
+				height: 32px;
+			}
+		}
+
+		h3 {
+			@include medium-20-uppercase;
+			color: #0d0d0db2;
+
+			@include mobile {
+				@include medium-16-uppercase;
+			}
+		}
+
+		p {
+			@include regular-18;
+			color: #0d0d0db2;
+
+			@include mobile {
+				@include regular-16;
+			}
+		}
+	}
+
+	&__certificate-text {
+		display: flex;
+		flex-direction: column;
+		gap: 12px;
+	}
+
+	&__show-more {
+		margin: 0 auto;
 	}
 }
 
