--- a/src/styles/components/business/_reviews-section.scss
+++ b/src/styles/components/business/_reviews-section.scss
@@ -69,6 +69,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 40px;
+		height: 100%;
 
 		@include tablet {
 			padding: 20px;
@@ -95,6 +96,14 @@
 			@include tablet {
 				@include regular-16;
 			}
+		}
+	}
+
+	&__additional-description {
+		margin-top: auto;
+		span {
+			@include regular-18;
+			color: $gray30;
 		}
 	}
 
