--- a/src/styles/components/business/_media-detail.scss
+++ b/src/styles/components/business/_media-detail.scss
@@ -17,13 +17,14 @@
 		flex-direction: column;
 		gap: 20px;
 		align-items: flex-end;
+		max-width: 1040px;
+		margin-left: auto;
 
 		@include tablet {
 			gap: 15px;
 		}
 
 		p {
-			max-width: 1040px;
 			@include regular-20;
 
 			@include tablet {
@@ -32,8 +33,9 @@
 		}
 
 		iframe {
-			width: 50%;
+			width: 65%;
 			aspect-ratio: 16 / 9;
+			margin: 20px auto;
 
 			@include tablet {
 				width: 100%;
