--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -74,3 +74,7 @@
 @import 'components/business/cookie';
 @import 'components/business/map-preview';
 @import 'components/business/fraction';
+@import 'components/business/benefits';
+@import 'components/business/univercity';
+@import 'components/business/start';
+
