--- a/src/styles/components/business/_univercity.scss
+++ b/src/styles/components/business/_univercity.scss
@@ -18,11 +18,9 @@
 		}
 
 		img {
-			max-width: 167px;
-
-			@include mobile {
-				width: 79px;
-			}
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 		}
 
 		h2 {
