--- a/src/styles/components/business/_benefits.scss
+++ b/src/styles/components/business/_benefits.scss
@@ -1,5 +1,6 @@
 .benefits {
 	margin-bottom: 80px;
+	overflow: hidden;
 
 	h2 {
 		max-width: 1200px;
@@ -16,12 +17,20 @@
 	}
 
 	&__swiper {
-		.swiper-wrapper {
-			padding-bottom: 80px;
+		padding-bottom: 80px;
+		margin-top: 80px;
+		margin-left: 175px;
+		margin-right: 20px;
+		overflow: visible;
 
-			@include tablet {
-				padding-bottom: 40px;
-			}
+		@include desktop {
+			margin-left: 50px;
+		}
+
+		@include tablet {
+			margin-top: 40px;
+			margin-left: 20px;
+			padding-bottom: 40px;
 		}
 
 		.swiper-slide {
