--- a/src/styles/components/business/_univercity.scss
+++ b/src/styles/components/business/_univercity.scss
@@ -1,5 +1,6 @@
 .univercity {
 	margin-bottom: 80px;
+	overflow: hidden;
 	@include tablet {
 		margin-bottom: 60px;
 	}
@@ -62,6 +63,24 @@
 			@include mobile {
 				@include regular-16;
 			}
+		}
+	}
+
+	&__swiper {
+		padding-bottom: 80px;
+		margin-top: 80px;
+		margin-left: 175px;
+		margin-right: 20px;
+		overflow: visible;
+
+		@include desktop {
+			margin-left: 50px;
+		}
+
+		@include tablet {
+			margin-top: 40px;
+			margin-left: 20px;
+			padding-bottom: 40px;
 		}
 	}
 }
