--- a/src/styles/components/business/_career-section.scss
+++ b/src/styles/components/business/_career-section.scss
@@ -15,6 +15,8 @@
 		display: grid;
 		grid-template-rows: minmax(0, 150px) auto auto;
 		gap: 28px;
+		justify-content: flex-end;
+		text-align: right;
 
 		@include desktop_large {
 			height: unset;
@@ -24,6 +26,8 @@
 			padding-top: 80px;
 			padding-bottom: 80px;
 			grid-template-rows: unset;
+			justify-content: left;
+			text-align: left;
 		}
 	}
 
@@ -128,6 +132,12 @@
 			height: unset;
 			white-space: wrap;
 			line-height: unset;
+		}
+	}
+
+	&__form {
+		form {
+			bottom: -260px;
 		}
 	}
 }
