--- a/src/styles/components/business/_career-section.scss
+++ b/src/styles/components/business/_career-section.scss
@@ -31,6 +31,13 @@
 		}
 	}
 
+	&_left {
+		.container {
+			justify-content: flex-start;
+			text-align: left;
+		}
+	}
+
 	video {
 		position: absolute;
 		top: 0;
