--- a/src/styles/components/business/_employees.scss
+++ b/src/styles/components/business/_employees.scss
@@ -1,27 +1,36 @@
 .employees {
-	display: grid;
-	grid-template-columns: repeat(3, minmax(0, 510px));
-	gap: 20px;
 	margin-bottom: 140px;
 	justify-content: flex-start;
-
-	@include desktop {
-		grid-template-columns: repeat(2, 1fr);
-	}
 
 	@include tablet {
 		margin-bottom: 80px;
 	}
 
-	@include tablet_small {
-		grid-template-columns: 1fr;
+	&__swiper {
+		margin-left: 175px;
+		margin-right: 20px;
+		overflow: visible;
+
+		@include desktop {
+			margin-left: 50px;
+		}
+
+		@include tablet {
+			margin-left: 20px;
+		}
 	}
 
 	&__card {
+		width: 450px;
 		background-color: $gray04;
 		padding-bottom: 30px;
 		display: flex;
 		flex-direction: column;
+		height: auto;
+
+		@include mobile {
+			width: 320px;
+		}
 
 		img {
 			max-width: 510px;
