add warranty page

--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -92,6 +92,10 @@
   <div class="header__right-bar" id="bar">
     <div class="header__burger" id="burger"></div>
     <div class="header__close" id="close-menu"></div>
+    <a href="#" class="header__service">
+
+
+    </a>
   </div>
 </header>
 <nav class="menu" id="menu">
