--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,6 +20,7 @@
 @import 'components/ui/up';
 @import 'components/ui/iframe';
 @import 'components/ui/image-box';
+@import 'components/ui/select';
 
 @import 'components/business/breadcrumbs';
 @import 'components/business/header';
@@ -77,4 +78,5 @@
 @import 'components/business/benefits';
 @import 'components/business/univercity';
 @import 'components/business/start';
+@import 'components/business/warranty.scss';
 
