--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -194,6 +194,7 @@
     <div class="footer__bottom">
       <span>© «Fort Dialogue», 2023</span>
       <a href="#" class="link link_gray">Политика конфиденциальности</a>
+      <a href="#" class="link link_gray">Сервис и гарантия</a>
       <a href="https://wptt.ru" class="link link_gray" target="_blank">Разработка — Вебпространство</a>
     </div>
   </div>
