--- a/src/styles/components/business/_header.scss
+++ b/src/styles/components/business/_header.scss
@@ -13,7 +13,7 @@
 	@include tablet {
 		height: 45px;
 		justify-content: space-between;
-		padding-right: 76px;
+		padding-right: 120px;
 	}
 
 	&__logo {
@@ -191,9 +191,14 @@
 		z-index: 3;
 
 		@include tablet {
+			width: 100px;
 			height: 45px;
 			background-color: unset;
 			border-left: solid 1px $gray10;
+			display: flex;
+			flex-direction: row-reverse;
+			padding: 0 20px;
+			gap: 20px;
 		}
 
 		&.active {
@@ -216,8 +221,8 @@
 
 		@include tablet {
 			height: 10px;
-			width: 20px;
-			position: absolute;
+			width: 27px;
+			// position: absolute;
 			top: 0;
 			right: 0;
 			bottom: 0;
@@ -239,14 +244,30 @@
 
 		@include tablet {
 			background-image: url(@icons/cross-black.svg);
-			width: 16px;
+			width: 26px;
 			height: 16px;
-			position: absolute;
+			// position: absolute;
 			top: 0;
 			right: 0;
 			bottom: 0;
 			left: 0;
 			margin: auto;
+		}
+	}
+
+	&__service {
+		background-image: url(@icons/service.svg);
+		margin: 40px auto 0 auto;
+		height: 30px;
+		width: 30px;
+		background-repeat: no-repeat;
+		cursor: pointer;
+		background-size: contain;
+
+		@include tablet {
+			background-image: url(@icons/service-black.svg);
+			margin: auto;
+			background-position: center;
 		}
 	}
 }
