--- a/src/styles/components/business/_media-component.scss
+++ b/src/styles/components/business/_media-component.scss
@@ -1,3 +1,149 @@
+// .media-component {
+// 	display: grid;
+// 	grid-template-columns: minmax(auto, 650px) calc(55% - 20px);
+// 	gap: 20px;
+
+// 	@include tablet {
+// 		grid-template-columns: 1fr;
+// 		gap: 40px;
+// 	}
+
+// 	// img {
+// 	// 	height: unset;
+
+// 	// 	@include desktop_medium {
+// 	// 		max-height: 780px;
+// 	// 	}
+
+// 	// 	@include mobile {
+// 	// 		max-height: 400px;
+// 	// 	}
+// 	// }
+
+// 	&_secondary {
+// 		grid-template-columns: repeat(2, 1fr) !important;
+
+// 		// img {
+// 		// 	max-height: 300px !important;
+
+// 		// 	@include min_desktop_extra {
+// 		// 		max-height: 500px !important;
+// 		// 	}
+// 		// }
+// 		.news-card {
+// 			padding-top: 0;
+
+// 			&__image {
+// 				position: relative;
+// 				// min-height: 300px !important;
+// 				display: none;
+
+// 				// @include min_desktop_extra {
+// 				// 	min-height: 600px !important;
+// 				// }
+
+// 				img {
+// 					width: 100%;
+// 					z-index: 1;
+// 					object-fit: cover;
+// 				}
+// 			}
+
+// 			// img {
+// 			// 	display: none;
+// 			// }
+// 		}
+
+// 		@include tablet_small {
+// 			display: flex;
+// 			flex-direction: column;
+// 			gap: 20px;
+
+// 			.news-card {
+// 				padding: 0 0 20px 0;
+// 				gap: 0;
+
+// 				img {
+// 					margin-bottom: 20px;
+// 				}
+
+// 				.news-card__date {
+// 					margin-bottom: 24px;
+// 				}
+
+// 				h3 {
+// 					margin-bottom: 15px;
+// 				}
+
+// 				p {
+// 					margin-bottom: 40px;
+// 				}
+// 			}
+
+// 			.news-card:nth-child(n + 4) {
+// 				display: none;
+// 			}
+// 		}
+
+// 		.news-card:nth-child(1),
+// 		.news-card:nth-child(6),
+// 		.news-card:nth-child(7) {
+// 			border: none;
+// 			background-color: $gray04;
+// 			padding: 0 0 24px 0;
+
+// 			@include tablet_small {
+// 				padding: 0 0 20px 0;
+// 			}
+
+// 			.news-card__date {
+// 				margin-left: 38px !important;
+// 				margin-right: 38px !important;
+
+// 				@include tablet {
+// 					margin-left: 20px !important;
+// 					margin-right: 20px !important;
+// 				}
+// 			}
+
+// 			div {
+// 				padding: 0;
+// 				border: none;
+// 			}
+
+// 			h3,
+// 			p,
+// 			a {
+// 				margin-left: 38px;
+// 				margin-right: 38px;
+
+// 				@include tablet {
+// 					margin-left: 20px;
+// 					margin-right: 20px;
+// 				}
+// 			}
+
+// 			.news-card__image {
+// 				display: block;
+// 			}
+// 		}
+
+// 		.news-card:nth-child(1) {
+// 			grid-row: 1 / 3;
+// 		}
+
+// 		.news-card:nth-child(6) {
+// 			grid-row: 3 / 5;
+// 			grid-column: 2;
+// 		}
+
+// 		.news-card:nth-child(7) {
+// 			grid-row: 5 / 7;
+// 			grid-column: 1;
+// 		}
+// 	}
+// }
+
 .media-component {
 	display: grid;
 	grid-template-columns: minmax(auto, 650px) calc(55% - 20px);
@@ -8,17 +154,17 @@
 		gap: 40px;
 	}
 
-	// img {
-	// 	height: unset;
+	img {
+		// height: unset;
 
-	// 	@include desktop_medium {
-	// 		max-height: 780px;
-	// 	}
+		@include desktop_medium {
+			max-height: 780px;
+		}
 
-	// 	@include mobile {
-	// 		max-height: 400px;
-	// 	}
-	// }
+		@include mobile {
+			max-height: 400px;
+		}
+	}
 
 	&_secondary {
 		grid-template-columns: repeat(2, 1fr) !important;
@@ -35,17 +181,21 @@
 
 			&__image {
 				position: relative;
-				// min-height: 300px !important;
+				min-height: 300px !important;
 				display: none;
 
-				// @include min_desktop_extra {
-				// 	min-height: 600px !important;
-				// }
+				@include min_desktop_extra {
+					min-height: 600px !important;
+				}
 
 				img {
+					position: absolute;
+					top: 0;
+					left: 0;
+
 					width: 100%;
 					z-index: 1;
-					object-fit: cover;
+					// object-fit: cover;
 				}
 			}
 
