--- a/src/html/components/ui/_input-text.html
+++ b/src/html/components/ui/_input-text.html
@@ -1,4 +1,4 @@
-<div class="form-group input__container input__container_text">
+<div class="form-group input__container input__container_text @@if (context.class) {@@class}">
 	@@if (context.label) {
 	@@if (context.id) {
 	<label class="input__label" for="@@id">@@label@@if (context.required) {*}</label>
