--- a/src/styles/components/business/_career-section.scss
+++ b/src/styles/components/business/_career-section.scss
@@ -1,7 +1,10 @@
 .career-section {
 	position: relative;
-	height: 909px;
 	margin-bottom: 125px;
+
+	@include desktop_large {
+		margin-bottom: 250px;
+	}
 
 	@include tablet {
 		height: unset;
@@ -53,7 +56,7 @@
 
 		@include tablet {
 			margin: unset;
-			max-height: 800px;
+			max-height: 950px;
 		}
 	}
 
@@ -132,19 +135,24 @@
 		padding: 14px 24px;
 		width: fit-content;
 		border-radius: 60px;
+		min-height: 52px;
+		height: unset !important;
+		white-space: wrap;
+		line-height: unset;
 
 		@include mobile {
 			@include medium-16-uppercase;
-			padding: 10px 24px;
-			height: unset;
-			white-space: wrap;
-			line-height: unset;
+			padding: 10px 24px !important;
 		}
 	}
 
 	&__form {
 		form {
 			bottom: -260px !important;
+
+			@include desktop_large {
+				bottom: -370px !important;
+			}
 		}
 	}
 }
