--- a/src/html/components/ui/_input-file.html
+++ b/src/html/components/ui/_input-file.html
@@ -1,5 +1,5 @@
 <div class="form-group input__container input__container_file">
-	<input class="form-control" @@if (context.required) {required} @@if (context.id) {id="@@id" } @@if (context.name) {name="@@name" } data-type="file" type="file" @@if (context.errorMessage) {data-pristine-required-message="@@errorMessage" }>
+	<input class="form-control" @@if (context.multiple) {multiple} @@if (context.required) {required} @@if (context.id) {id="@@id" } @@if (context.name) {name="@@name" } data-type="file" type="file" @@if (context.errorMessage) {data-pristine-required-message="@@errorMessage" }>
 	<div class="pristine-success"></div>
 	@@if (context.button) {
 	<span class="file-button">@@button</span>
