--- a/src/styles/components/business/_task.scss
+++ b/src/styles/components/business/_task.scss
@@ -113,7 +113,7 @@
 			margin-top: 80px;
 			margin-bottom: 10px;
 			@include regular-20;
-			color: $gray30;
+			// color: $gray30;
 
 			@include tablet {
 				@include regular-16;
